fixed contact section field colors and alignment of each of the sections

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -89,3 +89,7 @@ $map-grid-props: (
     height: 100vh;
   } 
 }
+
+.section-container {
+  padding: 5%;
+}
